# HALSPA-runner

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  run
deploy/: chromium-kiosk.desktop  halspa-runner.service  install.sh  kiosk-start.sh
docs/: pi-kiosk-setup.md  plan-hierarchical-test-browser.md
docs/solutions/best-practices/: pytest-marker-ast-scan-and-conftest-bypass-2026-04-23.md  sandwich-auto-detection-frontend-sync-2026-04-21.md  test-file-discovery-parse-config-not-subprocess-2026-04-23.md
docs/solutions/integration-issues/: pytest-collect-only-output-format-2026-04-21.md
docs/solutions/ui-bugs/: chromium-147-webkit-scrollbar-shadow-dom-2026-04-22.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: app-shell.js  styles.css  touch-feedback.js  ws-client.js
frontend/src/screens/: estop-modal.js  estop-screen.js  main-menu.js  results-summary.js  test-runner-screen.js  test-selection.js
src/halspa_runner/: app.py  config.py  pytest_reporter.py  serial_manager.py  state.py  subprocess_utils.py  test_discovery.py  test_runner.py
tests/: test_app.py  test_discovery.py  test_pytest_reporter.py  test_runner.py  test_serial_manager.py  test_state.py
