[project]
name = "halspa-runner"
version = "0.1.0"
description = "Touchscreen test runner for HALSPA hardware test jigs"
authors = [{ name = "Matti Airas", email = "matti.airas@hatlabs.fi" }]
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pyserial>=3.5",
]

[project.optional-dependencies]
halspa = ["halspa"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "httpx>=0.27"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/halspa_runner"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.uv.sources]
halspa = { path = "../HALSPA-client/halspa", editable = true }
